Fix footer default content alignment.

--- a/sources/stylesheets/content/_text.scss
+++ b/sources/stylesheets/content/_text.scss
@@ -17,6 +17,7 @@
   }
 
   .site-footer & {
+    text-align: center;
     font-size: 14px;
     color: rgba($black, .7);
   }
